UI changes, and navbar added

--- a/src/main/resources/public/partials/building-detail.html
+++ b/src/main/resources/public/partials/building-detail.html
@@ -1,4 +1,11 @@
-<span>{{building}}</span>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">Building details: {{building.name}} (id:
+			{{building.id}})</h3>
+	</div>
+	<div class="panel-body">
+		<span>{{building}}</span> <br /> <a href="#/buildings">Back</a>
+	</div>
+</div>
 
-<br/>
-<a href="#/buildings">Back</a>
+
