--- a/src/main/resources/public/partials/building-list.html
+++ b/src/main/resources/public/partials/building-list.html
@@ -1,7 +1,13 @@
-<h2>So ... here it is.</h2>
-		<br /> Nothing here {{'yet' + '!'}} <br /> Buildings:
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">Building list</h3>
+	</div>
+	<div class="panel-body">
 		<ul>
-			<li ng-repeat="building in buildings"><a href="#/buildings/{{building.id}}"><span>{{building.name}}</span></a>
+			<li ng-repeat="building in buildings"><a
+				href="#/buildings/{{building.id}}"><span>{{building.name}}</span></a>
 				<p>{{building.address}}</p></li>
 		</ul>
-		
+	</div>
+</div>
+
