--- a/src/main/resources/public/partials/login-form.html
+++ b/src/main/resources/public/partials/login-form.html
@@ -5,11 +5,11 @@
 	<form role="form">
 		<div class="form-group">
 			<label for="username">Username</label> <input type="text"
-				class="form-control" id="username" placeholder="Enter username" />
+				class="form-control" id="username" placeholder="Enter username" ng-model="username"/>
 		</div>
 		<div class="form-group">
 			<label for="password">Password</label> <input type="password"
-				class="form-control" id="password" placeholder="Password" />
+				class="form-control" id="password" placeholder="Password" ng-model="password"/>
 		</div>
 		<!-- <button type="submit" class="btn btn-default">Submit</button> -->
 	</form>
