--- a/src/main/resources/public/partials/building-list.html
+++ b/src/main/resources/public/partials/building-list.html
@@ -1,14 +1,11 @@
-<div class="panel panel-default">
-	<div class="panel-heading">
-		<h3 class="panel-title">Building list</h3>
-	</div>
-	<div class="panel-body">
-		<ul ng-if="loggedIn">
-			<li ng-repeat="building in buildings"><a
-				href="#/buildings/{{building.id}}"><span>{{building.name}}</span></a>
-				<p>{{building.address}}</p></li>
-		</ul>
+
+		<h3>Building list</h3>
+
+		
+			<div ng-repeat="building in buildings">
+				<s7-building building="building"/>
+				</div>
+
 		<span ng-if="!loggedIn">Not logged in.</span>
-	</div>
-</div>
+
 
