--- a/src/main/resources/public/partials/building-detail.html
+++ b/src/main/resources/public/partials/building-detail.html
@@ -1,10 +1,29 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title">Building details: {{building.name}} (id:
-			{{building.id}})</h3>
+		<h3 class="panel-title">Building details</h3>
+		
 	</div>
 	<div class="panel-body">
-		<span>{{building}}</span> <br /> <a href="#/buildings">Back</a>
+		<div class="row">
+			<div class="col-sm-2 text-right">
+				<strong>Id:</strong>
+			</div>
+			<div class="col-sm-10">{{building.id}}</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-2 text-right">
+				<strong>Name:</strong>
+			</div>
+			<div class="col-sm-10">{{building.name}}</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-2 text-right">
+				<strong>Address:</strong>
+			</div>
+			<div class="col-sm-10"><s7-address address="building.address"/></div>
+		</div>
+		<a class="btn btn-default" href="#/buildings">Back</a>
+		<button class="btn btn-primary pull-right" ng-click="edit()"><span class="glyphicon glyphicon-edit"/> Edit</button>
 	</div>
 </div>
 
