--- a/src/main/resources/public/partials/edit-building.html
+++ b/src/main/resources/public/partials/edit-building.html
@@ -1,7 +1,8 @@
 
 <form novalidate="novalidate" class="form-horizontal" name="buildingForm">
 	<div class="col-sm-offset-2 col-sm-10">
-		<h2>Edit building details:</h2>
+		<h2 ng-if="!adding">Edit building details:</h2>
+		<h2 ng-if="adding">Add new building:</h2>
 	</div>
 	<div class="form-group">
 		<label class="control-label col-sm-2">Id</label>
