--- a/src/main/resources/public/partials/edit-building.html
+++ b/src/main/resources/public/partials/edit-building.html
@@ -11,7 +11,7 @@
 				ng-model="building.id" />
 		</div>
 	</div>
-	<div class="form-group">
+	<div class="form-group" ng-class="{'has-error': !buildingForm.$valid}">
 		<label class="control-label col-sm-2">Name</label>
 		<div class="col-sm-10">
 			<input type="text" class="form-control" id="name"
