error handling improved

--- a/src/main/resources/public/partials/building-list.html
+++ b/src/main/resources/public/partials/building-list.html
@@ -1,7 +1,7 @@
 
 <h3>Building list</h3>
 
-<a href="#/addBuilding" class="btn btn-primary">Add building</a>
+<a ng-show="loggedIn" href="#/addBuilding" class="btn btn-primary">Add building</a>
 
 
 <div ng-repeat="building in buildings">
