--- a/src/main/resources/public/partials/edit-building.html
+++ b/src/main/resources/public/partials/edit-building.html
@@ -1,5 +1,6 @@
 
-<form novalidate="novalidate" class="form-horizontal" name="buildingForm">
+<form novalidate="novalidate" class="form-horizontal"
+	name="buildingForm">
 	<div class="col-sm-offset-2 col-sm-10">
 		<h2 ng-if="!adding">Edit building details:</h2>
 		<h2 ng-if="adding">Add new building:</h2>
@@ -11,11 +12,16 @@
 				ng-model="building.id" />
 		</div>
 	</div>
-	<div class="form-group" ng-class="{'has-error': !buildingForm.$valid}">
+	<div class="form-group"
+		ng-class="{'has-error': showError('name')}">
 		<label class="control-label col-sm-2">Name</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="name"
-				ng-model="building.name" ng-minlength="5" ng-required="true"/>
+			<input type="text" class="form-control" id="name" name="name"
+				ng-model="building.name" ng-minlength="5" ng-required="true" />
+			<div class="help-block
+				with-errors"
+				ng-show="showError('name')">
+				Building name is too short or missing.</div>
 		</div>
 	</div>
 	<div class="form-group">
