--- a/src/main/resources/public/partials/edit-building.html
+++ b/src/main/resources/public/partials/edit-building.html
@@ -5,6 +5,11 @@
 		<h2 ng-if="!adding">Edit building details:</h2>
 		<h2 ng-if="adding">Add new building:</h2>
 	</div>
+	<div class="form-group has-error" ng-show="showFormError">
+		<div class="col-sm-offset-2 col-sm-10">
+			<div class="help-block with-errors">Form submission failed, please see details below.</div>	
+		</div>
+	</div>
 	<div class="form-group">
 		<label class="control-label col-sm-2">Id</label>
 		<div class="col-sm-10">
