--- a/src/main/resources/public/partials/login-form.html
+++ b/src/main/resources/public/partials/login-form.html
@@ -1,20 +1,20 @@
 <div class="modal-header">
-	<h3 class="modal-title">Login to Savet7</h3>
+	<h3 class="modal-title">{{'APP_LOGIN_TO' | translate}} {{'APP_TITLE' | translate}}</h3>
 </div>
 <div class="modal-body">
 	<form role="form">
 		<div class="form-group">
-			<label for="username">Username</label> <input type="text"
+			<label for="username">{{'APP_LOGIN_USERNAME' | translate}}</label> <input type="text"
 				class="form-control" id="username" placeholder="Enter username" ng-model="username"/>
 		</div>
 		<div class="form-group">
-			<label for="password">Password</label> <input type="password"
+			<label for="password">{{'APP_LOGIN_PASSWORD' | translate}}</label> <input type="password"
 				class="form-control" id="password" placeholder="Password" ng-model="password"/>
 		</div>
 		<!-- <button type="submit" class="btn btn-default">Submit</button> -->
 	</form>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" type="button" ng-click="login()">Login</button>
-	<button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+	<button class="btn btn-primary" type="button" ng-click="login()">{{'APP_LOGIN_LOGIN' | translate}}</button>
+	<button class="btn btn-warning" type="button" ng-click="cancel()">{{'APP_LOGIN_CANCEL' | translate}}</button>
 </div>
