--- a/src/main/resources/public/partials/login-form.html
+++ b/src/main/resources/public/partials/login-form.html
@@ -16,5 +16,5 @@
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" type="button" ng-click="login()">{{'APP_LOGIN_LOGIN' | translate}}</button>
-	<button class="btn btn-warning" type="button" ng-click="cancel()">{{'APP_LOGIN_CANCEL' | translate}}</button>
+	<button class="btn btn-warning" type="button" ng-click="cancel()">{{'APP_CANCEL' | translate}}</button>
 </div>
