--- a/src/main/resources/public/partials/edit-building.html
+++ b/src/main/resources/public/partials/edit-building.html
@@ -2,16 +2,16 @@
 <form novalidate="novalidate" class="form-horizontal"
 	name="buildingForm">
 	<div class="col-sm-offset-2 col-sm-10">
-		<h2 ng-if="!adding">Edit building details:</h2>
-		<h2 ng-if="adding">Add new building:</h2>
+		<h2 ng-if="!adding">{{'EDIT_BUILDING_DETAILS' | translate}}</h2>
+		<h2 ng-if="adding">{{'ADD_BUILDING_DETAILS' | translate}}</h2>
 	</div>
 	<div class="form-group has-error" ng-show="showFormError">
 		<div class="col-sm-offset-2 col-sm-10">
-			<div class="help-block with-errors">Form submission failed, please see details below.</div>	
+			<div class="help-block with-errors">{{'FORM_SUBMISSION_FAILED' | translate}}</div>	
 		</div>
 	</div>
 	<div class="form-group">
-		<label class="control-label col-sm-2">Id</label>
+		<label class="control-label col-sm-2">{{'EDIT_BUILDING_ID' | translate}}</label>
 		<div class="col-sm-10">
 			<input type="text" class="form-control" id="id" readonly
 				ng-model="building.id" />
@@ -19,20 +19,20 @@
 	</div>
 	<div class="form-group"
 		ng-class="{'has-error': showError('name')}">
-		<label class="control-label col-sm-2">Name</label>
+		<label class="control-label col-sm-2">{{'EDIT_BUILDING_NAME' | translate}}</label>
 		<div class="col-sm-10">
 			<input type="text" class="form-control" id="name" name="name"
 				ng-model="building.name" ng-minlength="5" ng-required="true" />
 			<div class="help-block
 				with-errors"
 				ng-show="showError('name')">
-				Building name is too short or missing.</div>
+				{{'FORM_ERROR_FIELD_SHORT' | translate}}</div>
 		</div>
 	</div>
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button type="submit" class="btn btn-success" ng-click="submit()">Save</button>
-			<button type="button" class="btn btn-warning" ng-click="cancel()">Cancel</button>
+			<button type="submit" class="btn btn-success" ng-click="submit()">{{'APP_SAVE' | translate}}</button>
+			<button type="button" class="btn btn-warning" ng-click="cancel()">{{'APP_CANCEL' | translate}}</button>
 		</div>
 	</div>
 </form>
