--- a/src/main/resources/public/css/savet7.css
+++ b/src/main/resources/public/css/savet7.css
@@ -5,7 +5,7 @@
     width:100%;
     height:100%;
     z-index:1000;
-    background-color: rgb(240,240,240);
+    background-color: rgb(0,0,0);
     opacity: .4;
  }
 
@@ -15,5 +15,6 @@
     top: 50%;
     margin-left: -32px; 
     margin-top: -32px;  
-    display: block;     
+    display: block;
+    color: white;     
 }
