--- a/src/main/resources/public/partials/edit-building.html
+++ b/src/main/resources/public/partials/edit-building.html
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 	<div class="form-group">
-		<label class="control-label col-sm-2">{{'EDIT_BUILDING_ID' | translate}}</label>
+		<label class="control-label col-sm-2">{{'EDIT_ID' | translate}}</label>
 		<div class="col-sm-10">
 			<input type="text" class="form-control" id="id" readonly
 				ng-model="building.id" />
