--- a/src/main/resources/public/partials/building-list.html
+++ b/src/main/resources/public/partials/building-list.html
@@ -32,6 +32,6 @@
 	first-text="{{'NAVIGATE_FIRST' | translate}}"
 	last-text="{{'NAVIGATE_LAST' | translate}}"></uib-pagination>
 
-<span ng-if="!loggedIn">{{'APP_NOT_LOGGED_IN' | translate}}</span>
+<span ng-if="!loggedIn" id="buildingListNotLoggedIn">{{'APP_NOT_LOGGED_IN' | translate}}</span>
 
 
