Adding and editing building tests added, adding address as well.

--- a/src/main/resources/public/partials/edit-building.html
+++ b/src/main/resources/public/partials/edit-building.html
@@ -25,7 +25,7 @@
 				ng-model="building.name" ng-minlength="5" ng-required="true" />
 			<div class="help-block
 				with-errors"
-				ng-show="showError('name')">
+				ng-show="showError('name')" id="theError">
 				{{'FORM_ERROR_FIELD_SHORT' | translate}}</div>
 		</div>
 	</div>
